--- a/DoAnCNPM_Backend/product_service/pom.xml
+++ b/DoAnCNPM_Backend/product_service/pom.xml
@@ -36,6 +36,7 @@
     <artifactId>spring-boot-starter-data-jpa</artifactId>
 </dependency>
 
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -47,6 +48,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
+
+<!-- Spring Security -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+</dependency>
+
 
         <!-- Web -->
         <dependency>
