--- a/DoAnCNPM_Backend/user_service/src/main/resources/application.properties
+++ b/DoAnCNPM_Backend/user_service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=user-service
 server.port=8081
 
 # PostgreSQL - dùng tên container trong Docker network
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/foodfast_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/foodfast_db
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.datasource.driver-class-name=org.postgresql.Driver
